--- a/Dockerfile.sharedvolume.stage2-production
+++ b/Dockerfile.sharedvolume.stage2-production
@@ -1,8 +1,8 @@
-# production Docker container:
+	# production Docker container:
 # assumes that the ELF has been already built and is available on the baremetal filesystem
 # under the bin/ folder. All its required shared libraries should be available as well under bin/
 
-FROM scratch
+FROM fmontorsi_builder:1 as mytest_prod
 COPY output/ /
 EXPOSE 8080
-ENTRYPOINT [ "/project/build/mytest" ]
+CMD [ "/project/build/mytest" ]
