--- a/Dockerfile.stage2-production
+++ b/Dockerfile.stage2-production
@@ -2,7 +2,7 @@
 # assumes that the ELF has been already built and is available on the baremetal filesystem
 # under the bin/ folder. All its required shared libraries should be available as well under bin/
 
-FROM scratch
+FROM scratch as mytest_prod
 COPY output/ /
 EXPOSE 8080
 ENTRYPOINT [ "/mytest" ]
