--- a/Dockerfile.sharedvolume.stage2-production
+++ b/Dockerfile.sharedvolume.stage2-production
@@ -2,7 +2,7 @@
 # assumes that the ELF has been already built and is available on the baremetal filesystem
 # under the bin/ folder. All its required shared libraries should be available as well under bin/
 
-FROM fmontorsi_builder:1 as mytest_prod
+FROM registry.fedoraproject.org/fedora-minimal:30
 COPY output/ /
 EXPOSE 8080
 CMD [ "/project/build/mytest" ]
